Fixed bug #40231 (file_exists incorrectly reports false)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@228151 c90b9560-bf6c-de11-be94-00142212c4b1